# qt-build

./: .gitignore  Jenkinsfile-stable  Jenkinsfile-test  README.md  build.py  build_linux  build_linux-arm  build_macosx  build_metadata.py  build_win64.bat  create_qt6_source_bundle.py  deploy.py  deploy_macosx  deploy_win64.bat  install_pyside_pth.py  mise.toml  pyproject.toml  qt6_build.py  target_qt6_version.py  upload_symbols.py
pyside_patches/: pyside-6.13.0-setup.patch  pyside-allow-special-enum-handling.patch  pyside-default-allow-thread.patch  pyside-fix-bad-shiboken-build-path.patch  pyside-fix-clearly-untested-pyi-generator.patch  pyside-fix-fedora-40-crash.patch  pyside-fix-pyi-parser.patch  pyside-fix-struct-typedef-infinite-loop.patch  pyside-fix-type-signature-crash.patch  pyside-fix-unsigned-long-overflow.patch  pyside-no-internal-distutils.patch  pyside-remove-graphicseffect.patch  pyside-remove-new-in-6.11-types.patch  pyside-revert-qml-property-virtual-override.patch  pyside-set-version-to-qt-6.10.1.patch  pyside-silence-unfixable-warnings.patch
qt_patches/: macdeployqt-perf.patch  qt6-remove_missing_agl_framework.patch  qt6-revert_a11y_keep_current_combobox_entry_in_sync.patch  qt6_allow_command_line_tools.patch  qt6_allow_native_message_dialog_with_style_sheets_active.patch  qt6_avoid_large_table_accessibility.patch  qt6_default_to_xcb.patch  qt6_disable_fp_convert_assert.patch  qt6_disable_parallel_fills.patch  qt6_disable_system_theme_swapping.patch  qt6_fix_clang_yield.patch  qt6_fix_default_qmessagebox_position.patch  qt6_fix_qtextedit_tab.patch  (+7 more)
