[project]
name = "qt-build"
version = "1.0.0"
description = "The build process and patches for Qt and related sub-projects for use in Binary Ninja."
authors = [
	{ name = "Rusty Wagner", email = "rusty@vector35.com" },
	{ name = "Alexander Taylor", email = "alex@vector35.com" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = []

[tool.uv]
package = false
